= CHANGES

== 1.2.1: 2009-XX-XX

* belongs_to(:many) support DN attribute.
* [#31] ActiveLdap::Base#attributes returns data that reflects
  schema definition. [Alexey.Chebotar]
* blocks DN attribute change by mass assignment with :id => ....
* [#35] fix has_many association is broken. [culturespy]
* Supported nested attribute options. [Hideyuki Yasuda]

== 1.2.0: 2009-09-22

* Supported ActiveRecord 2.3.4 and Rails 2.3.4.
* [IMCOMPATIBLE]
  [#23932] Inconsistant DN handling in object attributes [Marc Dequènes]
  (ActiveLdap::Base#dn and ActiveLdap::Base#base return
  ActiveLdap::DN not String)
* [#26824] support operational attributes detection [Marc Dequènes]
  (added ActiveLdap::Schema::Attribute#directory_operation?)
* [#27] Error saving an ActiveLDAP user [brad@lucky-dip.net]
* [#29] Raised on modify_rdn_entry when rdn already exists [Alexey.Chebotar]
* Added ActiveLdap::DN.parent.
* Supported renaming an entry. Renaming other DTI is only supported by
  JNDI backend.

== 1.1.0: 2009-07-18

* Improved tutorial. [Kazuaki Takase]
* Improvements:
  * API:
    * [#26] Supported to_xml for associations. [achemze]
    * ActiveLdap::Base.delete_all(filter=nil, options={}) ->
      ActiveLdap::Base.delete_all(filter_or_options={}).
      Sure, old method signature is also still supported.
    * belongs_to(:many) with :foreign_key is deprecated.
      Use :primary_key instead of :foreign_key. [Kazuaki Takase]
    * Means of has_many's :primary_key and :foreign_key are inverted.
      [Kazuaki Takase]
    * [experimental] Added ldap_field ActionView helper to
      generate form fileds for a LDAP entry.
  * Suppressed needless attributes updating.
* Dependencies:
  * Re-supported GetText.
  * ActiveRecord 2.3.2 is only supported.

== 1.0.9

* Added documents in Japanese. [Kazuaki Takase]
* Supported Ruby 1.9.1.
  * [#20] [Ruby 1.9 Support] :: Running Tests [Alexey.Chebotar]
* Supported Rails 2.3.2.
  * [#18] [Rails 2.3 Support] :: Running WEBrick Hangs [Alexey.Chebotar]